--- a/Palette.html
+++ b/Palette.html
@@ -23,74 +23,80 @@
             <h1>La palette du goût</h1>
             <div class="heart"><i class="far fa-heart"></i></div>
         </div>
+        <div class="transition1">
         <div class="title"><h2><span>ENTR</span>ÉES</h2></div>
-        <div class="sticker">
+        <a href="" class="sticker">
             <div class="txtsticker">
+                <div class="ok"><i class="fas fa-check-circle" hidden></i></div>
                 <div class="naming"><h3>Fricassée d'escargot</h3></div>
                 <div class="sidedish"><p>Au piment d'espelette</p>
                 <div class="price1">25€</div></div>
             </div>
-        </div>
-        <div class="sticker">
+        </a>
+        <a href="" class="sticker">
             <div class="txtsticker">
                 <div class="naming"><h3>Foie gras de canard mi-cuit</h3></div>
                 <div class="sidedish"><p>Et ses copeaux de truffe noire</p>
                 <div class="price2">35€</div></div>
             </div>
-        </div>
-        <div class="sticker">
+        </a>
+        <a href="" class="sticker">
             <div class="txtsticker">
                 <div class="naming"><h3>Oeuf au plat</h3></div>
                 <div class="sidedish"><p>Assaisonné à la truffe sur lit de caviar</p>
                 <div class="price3">20€</div></div>
             </div>
-        </div>
-    <div><h2><span>PLAT</span>S</h2></div>
-        <div class="sticker">
+        </a>
+        </div> <!--Fin de div de transition1-->
+    <div class= "transition2">
+    <div class="title"><h2><span>PLAT</span>S</h2></div>
+        <a href="" class="sticker">
             <div class="txtsticker">
                 <div class="naming"><h3>Filet de boeuf aux herbes</h3></div>
                 <div class="sidedish"><p>Accompagné de sa ribambelle de légumes</p>
                 <div class="price4">40€</div></div>
             </div>
-        </div>
-        <div class="sticker">
+        </a>
+        <a href="" class="sticker">
             <div class="txtsticker">
                 <div class="naming"><h3>Parmentier de queue de boeuf</h3></div>
                 <div class="sidedish"><p>À la truffe noire sur sa purée de panais</p>
                 <div class="price5">35€</div></div>
             </div>
-        </div>
-        <div class="sticker">
+        </a>
+        <a href="" class="sticker">
             <div class="txtsticker">
                 <div class="naming"><h3>Filet de turbot</h3></div>
                 <div class="sidedish"><p>Aux agrumes</p>
                 <div class="price6">44€</div></div>
             </div>
-        </div>
-    <div><h2><span>DESS</span>ERTS</h2></div>
-        <div class="sticker">
+        </a>
+    </div><!--Fin de div de transition2-->
+    <div class="transition3">
+    <div class="title"><h2><span>DESS</span>ERTS</h2></div>
+        <a href="" class="sticker">
             <div class="txtsticker">
                 <div class="naming"><h3>Paris-Brest</h3></div>
                 <div class="sidedish"><p>Revisité</p>
                 <div class="price7">18€</div></div>
             </div>
-        </div>
-        <div class="sticker">
+        </a>
+        <a href="" class="sticker">
             <div class="txtsticker">
                 <div class="naming"><h3>Macaron au chocolat d'exception</h3></div>
                 <div class="sidedish"><p>Et glace à la vanille de Madagascar</p>
                 <div class="price8">22€</div></div>
             </div>
-        </div>
-        <div class="sticker">
+        </a>
+        <a href="" class="sticker">
             <div class="txtsticker">
                 <div class="naming"><h3>Mousse au chocolat</h3></div>
                 <div class="sidedish"><p>Au piment d'Espelette et à la truffe noire</p>
                 <div class="price9">23€</div></div>
             </div>
-        </div>
+        </a>
+    </div><!--Fin de transition3-->
         <a class="btn" href="">Commander</a>
-    
     <footer>
         <div class="footer">
             <h6>ohmyfood</h6>
@@ -102,7 +108,7 @@
                         <div class="hands"><i class="fas fa-hands-helping" ></div></i>Devenir partenaire<br>
                     </div>
                         <div class="mentions">Mentions légales</div>
-                        <div class="contact"><a href="mailto: ohmyfood@outlook.fr">Contact</a></div>
+                        <div class="contact"><a href="mailto: ohmyfood@outlook.fr" class="contact">Contact</a></div>
                 </div>
         </div>
         </div>  <!--fin de div du menu-->  
