--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <div class="containerbtn">
                 <div class="number"><p>1</p></div>
                     <a class="btnfonction" href="">
-                        <div class= "pic"><i class="fas fa-mobile-alt"></i></div><span>Choisissez un restaurant</span></a></div>
+                        <div class= "pic1"><i class="fas fa-mobile-alt"></i></div><span>Choisissez un restaurant</span></a></div>
             </div>
             <div class="containerbtn">
                 <div class="number"><p>2</p></div>
@@ -48,7 +48,7 @@
                     <a href="Palette.html"><img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" class="picture" alt="La palette du goût"></a>
                 <div class="txtrestaurants">
                     <h4>La palette du goût</h4>
-                    <div class="heart1"><i class="fas fa-heart"></i></div>
+                    <a class="heart1" href=""><i class="fas fa-heart"></i></a>
                     <h5>Ménilmontant</h5>
                 </div>
                 </div>
