--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
                 <div class="txtrestaurants">
                     <h4>La palette du goût</h4>
                     <a class="heart1" href=""><i class="fas fa-heart"></i></a>
+                    <img class="svg" src="Sass/heart-svgrepo-com.svg" alt="heart"></img>
                     <h5>Ménilmontant</h5>
                 </div>
                 </div>
