--- a/Enchantée.html
+++ b/Enchantée.html
@@ -1,77 +1,126 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="Sass/menu.css">
     <script src="https://kit.fontawesome.com/804671873b.js" crossorigin="anonymous"></script>
     <title>La note enchantée</title>
 </head>
+<body>
+    <div class="loader"></div>
     <header>
-        <i class="fas fa-arrow-left"></i>
-        <div><img src="images/logo/ohmyfood.png" alt="OhMyFooD"></div>
+        <a href="index.html" class="arrow"><i class="fas fa-arrow-left" ></i></a>
+        <div class="header">
+        <img src="images/logo/ohmyfood.png"  alt="OhMyFooD" class="logoheader">
+        </div>
     </header>
     <section>
-        <div><img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La note Enchantée"></div>
+        <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La Palette du goût" class="bannerpic">
     </section>
     <section>
-    <div><h1>La note enchantée</h1><i class="far fa-heart"></i></div>
-    <div><h2>ENTREES</h2></div>
-    <div>
-        <div><h3>Ravioles de foie gras</h3><p>Accompagnés de leur crème à la truffe</p></div>
-        <div>25€</div>
-    </div>
-    <div>
-        <div><h3>Caviar osciètre</h3><p>Sur blini à la farine de blé noir</p></div>
-        <div>35€</div>
-    </div>
-    <div>
-        <div><h3>Homard et espuma de potiron</h3><p>Mariné aux zestes d'orange</p></div>
-        <div>20€</div>
-    </div>
-    <div>
-        <div><h3>Foie gras de canard cuit entier</h3><p>Confiture de figue et pain toasté</p></div>
-        <div>35€</div>
-    </div>
-    <div><h2>PLATS</h2></div>
-    <div>
-        <div><h3>Noix de coquilles Saint-Jacques</h3><p>Sur lit de purée de céleri-rave</p></div>
-        <div>40€</div>
-    </div>
-    <div>
-        <div><h3>Langoustine poêlée</h3><p>Purée de patate douce</p></div>
-        <div>35€</div>
-    </div>
-    <div>
-        <div><h3>Mijoté de queue de boeuf</h3><p>Et riz sauvage aux zestes de citron</p></div>
-        <div>44€</div>
-    </div>
-    <div><h2>DESSERTS</h2></div>
-    <div>
-        <div><h3>Macaron noisette et chocolat</h3><p>Glace au caramel brun et sel de Guérande</p></div>
-        <div>18€</div>
-    </div>
-    <div>
-        <div><h3>Baba au rhum revisité</h3><p>Avec son coulis de citron</p></div>
-        <div>22€</div>
-    </div>
-    <div>
-        <div><h3>Tarte au citron meringuée</h3><p>Déstructurée</p></div>
-        <div>23€</div>
-    </div>
-    </section>
-    <section>
+        <div class="menu">
+        <div class="containername">
+            <h1>La note enchantée</h1>
+            <div class="heart"><i class="far fa-heart"></i></div>
+        </div>
+        <div class="transition1">
+        <div class="title"><h2><span>ENTR</span>ÉES</h2></div>
+        <a class="sticker">
+            <div class="txtsticker">
+                <div class="ok"><i class="fas fa-check-circle" ></i></div>
+                <div class="naming"><h3>Ravioles de foie gras</h3></div>
+                <div class="sidedish"><p>Accompagnés de leur crème à la truffe</p>
+                <div class="price1">25€</div></div>
+            </div>
+        </a>
+        <a href="" class="sticker">
+            <div class="txtsticker">
+                <div class="naming"><h3>Caviar osciètre</h3></div>
+                <div class="sidedish"><p>Sur blini à la farine de blé noir</p>
+                <div class="price2">35€</div></div>
+            </div>
+        </a>
+        <a href="" class="sticker">
+            <div class="txtsticker">
+                <div class="naming"><h3>Homard et espuma de potiron</h3></div>
+                <div class="sidedish"><p>Mariné aux zestes d'orange</p>
+                <div class="price3">20€</div></div>
+            </div>
+        </a>
+        <a href="" class="sticker">
+            <div class="txtsticker">
+                <div class="naming"><h3>Foie gras de canard cuit entier</h3></div>
+                <div class="sidedish"><p>Confiture de figue et pain toasté</p>
+                <div class="price3">35€</div></div>
+            </div>
+        </a>
+        </div> <!--Fin de div de transition1-->
+    <div class= "transition2">
+    <div class="title"><h2><span>PLAT</span>S</h2></div>
+        <a href="" class="sticker">
+            <div class="txtsticker">
+                <div class="naming"><h3>Noix de coquilles Saint-Jacques</h3></div>
+                <div class="sidedish"><p>Sur lit de purée de céleri-rave</p>
+                <div class="price4">40€</div></div>
+            </div>
+        </a>
+        <a href="" class="sticker">
+            <div class="txtsticker">
+                <div class="naming"><h3>Langoustine poêlée</h3></div>
+                <div class="sidedish"><p>Purée de patate douce</p>
+                <div class="price5">35€</div></div>
+            </div>
+        </a>
+        <a href="" class="sticker">
+            <div class="txtsticker">
+                <div class="naming"><h3>Mijoté de queue de boeuf</h3></div>
+                <div class="sidedish"><p>Et riz sauvage aux zestes de citron</p>
+                <div class="price6">44€</div></div>
+            </div>
+        </a>
+    </div><!--Fin de div de transition2-->
+    <div class="transition3">
+    <div class="title"><h2><span>DESS</span>ERTS</h2></div>
+        <a href="" class="sticker">
+            <div class="txtsticker">
+                <div class="naming"><h3>Macaron noisette et chocolat</h3></div>
+                <div class="sidedish"><p>Glace au caramel brun et sel de Guérande</p>
+                <div class="price7">18€</div></div>
+            </div>
+        </a>
+        <a href="" class="sticker">
+            <div class="txtsticker">
+                <div class="naming"><h3>Baba au rhum revisité</h3></div>
+                <div class="sidedish"><p>Avec son coulis de citron</p>
+                <div class="price8">22€</div></div>
+            </div>
+        </a>
+        <a href="" class="sticker">
+            <div class="txtsticker">
+                <div class="naming"><h3>Tarte au citron meringuée</h3></div>
+                <div class="sidedish"><p>Déstructurée</p>
+                <div class="price9">23€</div></div>
+            </div>
+        </a>
+    </div><!--Fin de transition3-->
         <a class="btn" href="">Commander</a>
-    </section>
     <footer>
-        <div><img src="images/logo/ohmyfood@2x.svg" alt="ohmyfood"></div>
-        <i class="fas fa-utensils"></i><p>Proposer votre restaurant</p>
-        <i class="fas fa-hands-helping"></i><p>Devenir partenaire</p>
-        <p>Mentions légales</p>
-        <p>Contact</p>
-    </footer>
-<body>
-    
+        <div class="footer">
+            <h6>ohmyfood</h6>
+                <div class= "txtfooter">
+                    <div class="proposition">
+                        <div class="ustensil"><i class="fas fa-utensils"></div></i>Proposer votre restaurant<br>
+                    </div>
+                    <div class="partnair">
+                        <div class="hands"><i class="fas fa-hands-helping" ></div></i>Devenir partenaire<br>
+                    </div>
+                        <div class="mentions">Mentions légales</div>
+                        <div class="contact"><a href="mailto: ohmyfood@outlook.fr" class="contact">Contact</a></div>
+                </div>
+        </div>
+        </div>  <!--fin de div du menu-->  
+        </section>
+    </footer> 
 </body>
 </html>
