--- a/Palette.html
+++ b/Palette.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="Sass/palette.css">
+    <link rel="stylesheet" href="Sass/menu.css">
     <script src="https://kit.fontawesome.com/804671873b.js" crossorigin="anonymous"></script>
     <title>La palette du Goût</title>
 </head>
 <body>
+    <div class="loader"></div>
     <header>
         <a href="index.html" class="arrow"><i class="fas fa-arrow-left" ></i></a>
         <div class="header">
@@ -25,9 +26,9 @@
         </div>
         <div class="transition1">
         <div class="title"><h2><span>ENTR</span>ÉES</h2></div>
-        <a href="" class="sticker">
+        <a class="sticker">
             <div class="txtsticker">
-                <div class="ok"><i class="fas fa-check-circle" hidden></i></div>
+                <div class="ok"><i class="fas fa-check-circle" ></i></div>
                 <div class="naming"><h3>Fricassée d'escargot</h3></div>
                 <div class="sidedish"><p>Au piment d'espelette</p>
                 <div class="price1">25€</div></div>
