--- a/Palette.html
+++ b/Palette.html
@@ -97,7 +97,7 @@
             </div>
         </a>
     </div><!--Fin de transition3-->
-        <a class="btn" href="">Commander</a>
+    <div class=movebtn><a class="btn" href="">Commander</a></div>
     <footer>
         <div class="footer">
             <h6>ohmyfood</h6>
