--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
     <section class="first">
         <h1>Réservez le menu qui vous convient</h1>
         <h2>Découvrez des restaurants d'exception sélectionnés par nos soins</h2>
-        <a class="btn" href="">Explorer nos restaurants</a>
+        <div class=movebtn><a class="btn" href="">Explorer nos restaurants</a></div>
+
 </section>
     <section class="fonction">
         <h3>Fonctionnement</h3>
@@ -40,18 +41,20 @@
                     <a class="btnfonction" href="">               
                         <div class="pic"><i class="fas fa-store"></i></div><span>Dégustez au restaurant</span></a></div>
     </section>
-    <section class="restaurants">
+    
         <h3>Restaurants</h3>
+        <section class="restaurants">
             <div class="sticker">
                 <div class="containerpic">
                     <div class="new">Nouveau</div>
                     <a href="Palette.html"><img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" class="picture" alt="La palette du goût"></a>
                 <div class="txtrestaurants">
-                    <h4>La palette du goût</h4>
-                    <a class="heart1" href=""><i class="fas fa-heart"></i></a>
-                    <img class="svg" src="Sass/heart-svgrepo-com.svg" alt="heart"></img>
+                    <div class="txtheart"><h4>La palette du goût</h4>
+                    <a class="heart1" href=""><i class="fas fa-heart"></i></a></div>
+                    </div>
                     <h5>Ménilmontant</h5>
-                </div>
+                    <img class="svg" src="Sass/heart-svgrepo-com.svg" alt="heart"></img>
+                    </div>
                 </div>
             </div>
             <div class="sticker">
@@ -59,25 +62,28 @@
                     <div class="new">Nouveau</div>
                     <a href="Enchantée.html"><img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash Page1.jpg" class="picture" alt="La note enchantée"></a>
                 <div class="txtrestaurants">
-                    <h4>La note enchanté</h4>
+                    <div class="txtheart"><h4>La note enchanté</h4>
                     <div class="heart2"><i class="far fa-heart"></i></div>
+                    </div>
                     <h5>Charonne</h5>
-                </div>
+                    </div>
                 </div>
             </div>
             <div class="sticker">
                 <a href="Française.html"><img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" class="picture" alt="A la française"></a>
             <div class="txtrestaurants">
-                    <h4>A la française</h4>
+                    <div class="txtheart"><h4>A la française</h4>
                     <div class="heart3"><i class="far fa-heart"></i></div>
+                    </div>
                     <h5>Cité Rouge</h5>
             </div>
             </div>
             <div class="sticker">
                 <a href="Délice.html"><img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash Page1.jpg" class="picture" alt="le délice des sens"></a>
              <div class="txtrestaurants">      
-                    <h4>Le délice des sens</h4>
+                    <div class="txtheart"><h4>Le délice des sens</h4>
                     <div class="heart4"><i class="far fa-heart"></i></div>
+                    </div>
                     <h5>Folie-Méricourt</h5>
             </div>
             </div>
