--- a/Enchantée.html
+++ b/Enchantée.html
@@ -8,13 +8,12 @@
     <title>La note enchantée</title>
 </head>
 <body>
-    <div class="loader"></div>
-    <header>
+    <div class="loader"><img src="Sass/6fb1e3f8.png" class="imgcook"></div>
+    <section class="allmenu">
         <a href="index.html" class="arrow"><i class="fas fa-arrow-left" ></i></a>
         <div class="header">
         <img src="images/logo/ohmyfood.png"  alt="OhMyFooD" class="logoheader">
         </div>
-    </header>
     <section>
         <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La Palette du goût" class="bannerpic">
     </section>
@@ -122,5 +121,6 @@
         </div>  <!--fin de div du menu-->  
         </section>
     </footer> 
+    </section>
 </body>
 </html>
