--- a/Palette.html
+++ b/Palette.html
@@ -8,13 +8,12 @@
     <title>La palette du Goût</title>
 </head>
 <body>
-    <div class="loader"></div>
-    <header>
+    <div class="loader"><img src="Sass/Sanji_Drapeau.jpg" class="imgcook"></img></div>
+    <section class="allmenu">
         <a href="index.html" class="arrow"><i class="fas fa-arrow-left" ></i></a>
         <div class="header">
         <img src="images/logo/ohmyfood.png"  alt="OhMyFooD" class="logoheader">
         </div>
-    </header>
     <section>
         <img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="La Palette du goût" class="bannerpic">
     </section>
@@ -24,79 +23,92 @@
             <h1>La palette du goût</h1>
             <div class="heart"><i class="far fa-heart"></i></div>
         </div>
+        <div class="flexmenu">
         <div class="transition1">
         <div class="title"><h2><span>ENTR</span>ÉES</h2></div>
         <a class="sticker">
             <div class="txtsticker">
                 <div class="ok"><i class="fas fa-check-circle" ></i></div>
                 <div class="naming"><h3>Fricassée d'escargot</h3></div>
-                <div class="sidedish"><p>Au piment d'espelette</p>
-                <div class="price1">25€</div></div>
+                <div class="sidedish">
+                <p>Au piment d'espelette</p>
+                <div class="price">25€</div>
+                </div>
             </div>
         </a>
-        <a href="" class="sticker">
+        <a href="naming" class="sticker">
             <div class="txtsticker">
-                <div class="naming"><h3>Foie gras de canard mi-cuit</h3></div>
+                <div class="ok"><i class="fas fa-check-circle" ></i></div>
+                <div class="naming" id="naming"><h3>Foie gras de canard mi-cuit</h3></div>
                 <div class="sidedish"><p>Et ses copeaux de truffe noire</p>
-                <div class="price2">35€</div></div>
+                <div class="price">35€</div></div>
             </div>
         </a>
-        <a href="" class="sticker">
+        <a  href="naming" class="sticker">
             <div class="txtsticker">
-                <div class="naming"><h3>Oeuf au plat</h3></div>
+                <div class="ok"><i class="fas fa-check-circle" ></i></div>
+                <div class="naming" id="naming"><h3>Oeuf au plat</h3></div>
                 <div class="sidedish"><p>Assaisonné à la truffe sur lit de caviar</p>
-                <div class="price3">20€</div></div>
+                <div class="price">20€</div></div>
             </div>
         </a>
         </div> <!--Fin de div de transition1-->
     <div class= "transition2">
     <div class="title"><h2><span>PLAT</span>S</h2></div>
-        <a href="" class="sticker">
+        <a href="naming" class="sticker">
             <div class="txtsticker">
-                <div class="naming"><h3>Filet de boeuf aux herbes</h3></div>
-                <div class="sidedish"><p>Accompagné de sa ribambelle de légumes</p>
-                <div class="price4">40€</div></div>
+                <div class="ok"><i class="fas fa-check-circle" ></i></div>
+                <div class="naming" id="naming"><h3>Filet de boeuf aux herbes</h3></div>
+                <div class="sidedish">
+                <div class="ellipsis"><p>Accompagné de sa ribambelle de légumes</p></div>
+                <div class="price">40€</div></div>
             </div>
         </a>
-        <a href="" class="sticker">
+        <a href="naming" class="sticker">
             <div class="txtsticker">
-                <div class="naming"><h3>Parmentier de queue de boeuf</h3></div>
+                <div class="ok"><i class="fas fa-check-circle" ></i></div>
+                <div class="naming" id="naming"><h3>Parmentier de queue de boeuf</h3></div>
                 <div class="sidedish"><p>À la truffe noire sur sa purée de panais</p>
-                <div class="price5">35€</div></div>
+                <div class="price">35€</div></div>
             </div>
         </a>
-        <a href="" class="sticker">
+        <a href="naming" class="sticker">
             <div class="txtsticker">
-                <div class="naming"><h3>Filet de turbot</h3></div>
+                <div class="ok"><i class="fas fa-check-circle" ></i></div>
+                <div class="naming" id="naming"><h3>Filet de turbot</h3></div>
                 <div class="sidedish"><p>Aux agrumes</p>
-                <div class="price6">44€</div></div>
+                <div class="price">44€</div></div>
             </div>
         </a>
     </div><!--Fin de div de transition2-->
     <div class="transition3">
     <div class="title"><h2><span>DESS</span>ERTS</h2></div>
-        <a href="" class="sticker">
+        <a href="naming" class="sticker">
             <div class="txtsticker">
-                <div class="naming"><h3>Paris-Brest</h3></div>
+                <div class="ok"><i class="fas fa-check-circle" ></i></div>
+                <div class="naming" id="naming"><h3>Paris-Brest</h3></div>
                 <div class="sidedish"><p>Revisité</p>
-                <div class="price7">18€</div></div>
+                <div class="price">18€</div></div>
             </div>
         </a>
-        <a href="" class="sticker">
+        <a href="naming" class="sticker">
             <div class="txtsticker">
-                <div class="naming"><h3>Macaron au chocolat d'exception</h3></div>
+                <div class="ok"><i class="fas fa-check-circle" ></i></div>
+                <div class="naming" id="naming"><h3>Macaron au chocolat d'exception</h3></div>
                 <div class="sidedish"><p>Et glace à la vanille de Madagascar</p>
-                <div class="price8">22€</div></div>
+                <div class="price">22€</div></div>
             </div>
         </a>
-        <a href="" class="sticker">
+        <a href="naming" class="sticker">
             <div class="txtsticker">
-                <div class="naming"><h3>Mousse au chocolat</h3></div>
+                <div class="ok"><i class="fas fa-check-circle" ></i></div>
+                <div class="naming" id="naming"><h3>Mousse au chocolat</h3></div>
                 <div class="sidedish"><p>Au piment d'Espelette et à la truffe noire</p>
-                <div class="price9">23€</div></div>
+                <div class="price">23€</div></div>
             </div>
         </a>
     </div><!--Fin de transition3-->
+    </div>
     <div class=movebtn><a class="btn" href="">Commander</a></div>
     <footer>
         <div class="footer">
@@ -115,5 +127,6 @@
         </div>  <!--fin de div du menu-->  
         </section>
     </footer> 
+    </section>
 </body>
 </html>
