--- a/index.html
+++ b/index.html
@@ -21,24 +21,24 @@
     <section class="first">
         <h1>Réservez le menu qui vous convient</h1>
         <h2>Découvrez des restaurants d'exception sélectionnés par nos soins</h2>
-        <div class=movebtn><a class="btn" href="">Explorer nos restaurants</a></div>
+        <div class=movebtn><a class="btn" href="#">Explorer nos restaurants</a></div>
 
 </section>
     <section class="fonction">
         <h3>Fonctionnement</h3>
             <div class="containerbtn">
                 <div class="number"><p>1</p></div>
-                    <a class="btnfonction" href="">
+                    <a class="btnfonction" href="#">
                         <div class= "pic1"><i class="fas fa-mobile-alt"></i></div><span>Choisissez un restaurant</span></a></div>
             </div>
             <div class="containerbtn">
                 <div class="number"><p>2</p></div>
-                    <a class="btnfonction" href="">
+                    <a class="btnfonction" href="#">
                         <div class="pic"><i class="fas fa-list"></i></div><span>Composez votre menu</span></a></div>
             </div>
             <div class="containerbtn">
                 <div class="number"><p>3</p></div>
-                    <a class="btnfonction" href="">               
+                    <a class="btnfonction" href="#">               
                         <div class="pic"><i class="fas fa-store"></i></div><span>Dégustez au restaurant</span></a></div>
     </section>
     
@@ -50,7 +50,7 @@
                     <a href="Palette.html"><img src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" class="picture" alt="La palette du goût"></a>
                 <div class="txtrestaurants">
                     <div class="txtheart"><h4>La palette du goût</h4>
-                    <a class="heart1" href=""><i class="fas fa-heart"></i></a></div>
+                    <a class="heart1" href="javascript: void(0)"><i class="fas fa-heart"></i></a></div>
                     </div>
                     <h5>Ménilmontant</h5>
                     <img class="svg" src="Sass/heart-svgrepo-com.svg" alt="heart"></img>
