--- a/Délice.html
+++ b/Délice.html
@@ -36,7 +36,7 @@
                 </div>
             </div>
         </a>
-        <a href="naming" class="sticker">
+        <a href="#naming" class="sticker">
             <div class="txtsticker">
                 <div class="okposition">
                     <div class="ok"><i class="fas fa-check-circle" ></i></div></div>
@@ -45,7 +45,7 @@
                 <div class="price">35€</div></div>
             </div>
         </a>
-        <a  href="naming" class="sticker">
+        <a  href="#naming" class="sticker">
             <div class="txtsticker">
                 <div class="okposition">
                     <div class="ok"><i class="fas fa-check-circle" ></i></div>
@@ -58,7 +58,7 @@
         </div> <!--Fin de div de transition1-->
     <div class= "transition2">
     <div class="title"><h2><span>PLAT</span>S</h2></div>
-        <a href="naming" class="sticker">
+        <a href="#naming" class="sticker">
             <div class="txtsticker">
                 <div class="okposition">
                     <div class="ok"><i class="fas fa-check-circle" ></i></div>
@@ -69,7 +69,7 @@
                 <div class="price">40€</div></div>
             </div>
         </a>
-        <a href="naming" class="sticker">
+        <a href="#naming" class="sticker">
             <div class="txtsticker">
                 <div class="okposition">
                     <div class="ok"><i class="fas fa-check-circle" ></i></div>
@@ -79,7 +79,7 @@
                 <div class="price">35€</div></div>
             </div>
         </a>
-        <a href="naming" class="sticker">
+        <a href="#naming" class="sticker">
             <div class="txtsticker">
                 <div class="okposition">
                     <div class="ok"><i class="fas fa-check-circle" ></i></div>
@@ -92,7 +92,7 @@
     </div><!--Fin de div de transition2-->
     <div class="transition3">
     <div class="title"><h2><span>DESS</span>ERTS</h2></div>
-        <a href="naming" class="sticker">
+        <a href="#naming" class="sticker">
             <div class="txtsticker">
                 <div class="okposition">
                     <div class="ok"><i class="fas fa-check-circle" ></i></div>
@@ -102,7 +102,7 @@
                 <div class="price">18€</div></div>
             </div>
         </a>
-        <a href="naming" class="sticker">
+        <a href="#naming" class="sticker">
             <div class="txtsticker">
                 <div class="okposition">
                     <div class="ok"><i class="fas fa-check-circle" ></i></div>
@@ -112,7 +112,7 @@
                 <div class="price">22€</div></div>
             </div>
         </a>
-        <a href="naming" class="sticker">
+        <a href="#naming" class="sticker">
             <div class="txtsticker">
                 <div class="okposition">
                     <div class="ok"><i class="fas fa-check-circle" ></i></div>
@@ -124,7 +124,9 @@
         </a>
     </div><!--Fin de transition3-->
     </div>
-    <div class=movebtn><a class="btn" href="">Commander</a></div>
+    <div class=movebtn>
+        <div class="btn" href="">Commander</div>
+    </div>
     <footer>
         <div class="footer">
             <h6>ohmyfood</h6>
