--- a/Française.html
+++ b/Française.html
@@ -37,7 +37,7 @@
                 <div class="price">25€</div></div>
             </div>
         </a>
-        <a href="" class="sticker">
+        <a href="#naming" class="sticker">
             <div class="txtsticker">
                 <div class="okposition">
                     <div class="ok"><i class="fas fa-check-circle" ></i></div>
@@ -47,7 +47,7 @@
                 <div class="price">35€</div></div>
             </div>
         </a>
-        <a href="" class="sticker">
+        <a href="#naming" class="sticker">
             <div class="txtsticker">
                 <div class="okposition">
                     <div class="ok"><i class="fas fa-check-circle" ></i></div>
@@ -60,7 +60,7 @@
         </div> <!--Fin de div de transition1-->
     <div class= "transition2">
     <div class="title"><h2><span>PLAT</span>S</h2></div>
-        <a href="" class="sticker">
+        <a href="#naming" class="sticker">
             <div class="txtsticker">
                 <div class="okposition">
                     <div class="ok"><i class="fas fa-check-circle" ></i></div>
@@ -70,7 +70,7 @@
                 <div class="price">40€</div></div>
             </div>
         </a>
-        <a href="" class="sticker">
+        <a href="#naming" class="sticker">
             <div class="txtsticker">
                 <div class="okposition">
                     <div class="ok"><i class="fas fa-check-circle" ></i></div>
@@ -80,7 +80,7 @@
                 <div class="price">35€</div></div>
             </div>
         </a>
-        <a href="" class="sticker">
+        <a href="#naming" class="sticker">
             <div class="txtsticker">
                 <div class="okposition">
                     <div class="ok"><i class="fas fa-check-circle" ></i></div>
@@ -93,7 +93,7 @@
     </div><!--Fin de div de transition2-->
     <div class="transition3">
     <div class="title"><h2><span>DESS</span>ERTS</h2></div>
-        <a href="" class="sticker">
+        <a href="#naming" class="sticker">
             <div class="txtsticker">
                 <div class="okposition">
                     <div class="ok"><i class="fas fa-check-circle" ></i></div>
@@ -103,7 +103,7 @@
                 <div class="price">18€</div></div>
             </div>
         </a>
-        <a href="" class="sticker">
+        <a href="#naming" class="sticker">
             <div class="txtsticker">
                 <div class="okposition">
                     <div class="ok"><i class="fas fa-check-circle" ></i></div>
@@ -113,7 +113,7 @@
                 <div class="price">22€</div></div>
             </div>
         </a>
-        <a href="" class="sticker">
+        <a href="#naming" class="sticker">
             <div class="txtsticker">
                 <div class="okposition">
                     <div class="ok"><i class="fas fa-check-circle" ></i></div>
@@ -125,7 +125,9 @@
         </a>
     </div><!--Fin de transition3-->
     </div>
-        <div class=movebtn><a class="btn" href="">Commander</a></div>
+        <div class=movebtn>
+            <div class="btn" href="">Commander</div>
+        </div>
     <footer>
         <div class="footer">
             <h6>ohmyfood</h6>
