--- a/Palette.html
+++ b/Palette.html
@@ -28,7 +28,9 @@
         <div class="title"><h2><span>ENTR</span>ÉES</h2></div>
         <a class="sticker">
             <div class="txtsticker">
-                <div class="ok"><i class="fas fa-check-circle" ></i></div>
+                <div class="okposition">
+                    <div class="ok"><i class="fas fa-check-circle" ></i></div>
+                </div>
                 <div class="naming"><h3>Fricassée d'escargot</h3></div>
                 <div class="sidedish">
                 <p>Au piment d'espelette</p>
@@ -38,15 +40,19 @@
         </a>
         <a href="naming" class="sticker">
             <div class="txtsticker">
-                <div class="ok"><i class="fas fa-check-circle" ></i></div>
+                <div class="okposition">
+                    <div class="ok"><i class="fas fa-check-circle" ></i></div>
+                </div>
                 <div class="naming" id="naming"><h3>Foie gras de canard mi-cuit</h3></div>
                 <div class="sidedish"><p>Et ses copeaux de truffe noire</p>
                 <div class="price">35€</div></div>
             </div>
         </a>
-        <a  href="naming" class="sticker">
+        <a href="naming" class="sticker">
             <div class="txtsticker">
-                <div class="ok"><i class="fas fa-check-circle" ></i></div>
+                <div class="okposition">
+                    <div class="ok"><i class="fas fa-check-circle" ></i></div>
+                </div>
                 <div class="naming" id="naming"><h3>Oeuf au plat</h3></div>
                 <div class="sidedish"><p>Assaisonné à la truffe sur lit de caviar</p>
                 <div class="price">20€</div></div>
@@ -57,7 +63,9 @@
     <div class="title"><h2><span>PLAT</span>S</h2></div>
         <a href="naming" class="sticker">
             <div class="txtsticker">
-                <div class="ok"><i class="fas fa-check-circle" ></i></div>
+                <div class="okposition">
+                    <div class="ok"><i class="fas fa-check-circle" ></i></div>
+                </div>    
                 <div class="naming" id="naming"><h3>Filet de boeuf aux herbes</h3></div>
                 <div class="sidedish">
                 <div class="ellipsis"><p>Accompagné de sa ribambelle de légumes</p></div>
@@ -66,7 +74,9 @@
         </a>
         <a href="naming" class="sticker">
             <div class="txtsticker">
-                <div class="ok"><i class="fas fa-check-circle" ></i></div>
+                <div class="okposition">
+                    <div class="ok"><i class="fas fa-check-circle" ></i></div>
+                </div>
                 <div class="naming" id="naming"><h3>Parmentier de queue de boeuf</h3></div>
                 <div class="sidedish"><p>À la truffe noire sur sa purée de panais</p>
                 <div class="price">35€</div></div>
@@ -74,7 +84,9 @@
         </a>
         <a href="naming" class="sticker">
             <div class="txtsticker">
-                <div class="ok"><i class="fas fa-check-circle" ></i></div>
+                <div class="okposition">
+                    <div class="ok"><i class="fas fa-check-circle" ></i></div>
+                </div>
                 <div class="naming" id="naming"><h3>Filet de turbot</h3></div>
                 <div class="sidedish"><p>Aux agrumes</p>
                 <div class="price">44€</div></div>
@@ -85,7 +97,9 @@
     <div class="title"><h2><span>DESS</span>ERTS</h2></div>
         <a href="naming" class="sticker">
             <div class="txtsticker">
-                <div class="ok"><i class="fas fa-check-circle" ></i></div>
+                <div class="okposition">
+                    <div class="ok"><i class="fas fa-check-circle" ></i></div>
+                </div>
                 <div class="naming" id="naming"><h3>Paris-Brest</h3></div>
                 <div class="sidedish"><p>Revisité</p>
                 <div class="price">18€</div></div>
@@ -93,7 +107,9 @@
         </a>
         <a href="naming" class="sticker">
             <div class="txtsticker">
-                <div class="ok"><i class="fas fa-check-circle" ></i></div>
+                <div class="okposition">
+                    <div class="ok"><i class="fas fa-check-circle" ></i></div>
+                </div>
                 <div class="naming" id="naming"><h3>Macaron au chocolat d'exception</h3></div>
                 <div class="sidedish"><p>Et glace à la vanille de Madagascar</p>
                 <div class="price">22€</div></div>
@@ -101,7 +117,9 @@
         </a>
         <a href="naming" class="sticker">
             <div class="txtsticker">
-                <div class="ok"><i class="fas fa-check-circle" ></i></div>
+                <div class="okposition">
+                    <div class="ok"><i class="fas fa-check-circle" ></i></div>
+                </div>
                 <div class="naming" id="naming"><h3>Mousse au chocolat</h3></div>
                 <div class="sidedish"><p>Au piment d'Espelette et à la truffe noire</p>
                 <div class="price">23€</div></div>
@@ -109,7 +127,9 @@
         </a>
     </div><!--Fin de transition3-->
     </div>
-    <div class=movebtn><a class="btn" href="">Commander</a></div>
+    <div class=movebtn>
+        <div class="btn" href="">Commander</div>
+    </div>
     <footer>
         <div class="footer">
             <h6>ohmyfood</h6>
