--- a/Palette.html
+++ b/Palette.html
@@ -38,22 +38,23 @@
                 </div>
             </div>
         </a>
-        <a href="naming" class="sticker">
+        <a class="sticker">
             <div class="txtsticker">
                 <div class="okposition">
                     <div class="ok"><i class="fas fa-check-circle" ></i></div>
                 </div>
                 <div class="naming" id="naming"><h3>Foie gras de canard mi-cuit</h3></div>
                 <div class="sidedish"><p>Et ses copeaux de truffe noire</p>
-                <div class="price">35€</div></div>
+                <div class="price">35€</div>
+                </div>
             </div>
         </a>
-        <a href="naming" class="sticker">
+        <a class="sticker">
             <div class="txtsticker">
                 <div class="okposition">
                     <div class="ok"><i class="fas fa-check-circle" ></i></div>
                 </div>
-                <div class="naming" id="naming"><h3>Oeuf au plat</h3></div>
+                <div class="naming"><h3>Oeuf au plat</h3></div>
                 <div class="sidedish"><p>Assaisonné à la truffe sur lit de caviar</p>
                 <div class="price">20€</div></div>
             </div>
@@ -61,18 +62,17 @@
         </div> <!--Fin de div de transition1-->
     <div class= "transition2">
     <div class="title"><h2><span>PLAT</span>S</h2></div>
-        <a href="naming" class="sticker">
+        <a class="sticker">
             <div class="txtsticker">
                 <div class="okposition">
                     <div class="ok"><i class="fas fa-check-circle" ></i></div>
-                </div>    
-                <div class="naming" id="naming"><h3>Filet de boeuf aux herbes</h3></div>
-                <div class="sidedish">
-                <div class="ellipsis"><p>Accompagné de sa ribambelle de légumes</p></div>
+                </div>
+                <div class="naming"><h3>Filet de boeuf aux herbes</h3></div>
+                <div class="sidedish"><p>Accompagné de sa ribambelle de légumes</p>
                 <div class="price">40€</div></div>
             </div>
         </a>
-        <a href="naming" class="sticker">
+        <a class="sticker">
             <div class="txtsticker">
                 <div class="okposition">
                     <div class="ok"><i class="fas fa-check-circle" ></i></div>
@@ -82,7 +82,7 @@
                 <div class="price">35€</div></div>
             </div>
         </a>
-        <a href="naming" class="sticker">
+        <a class="sticker">
             <div class="txtsticker">
                 <div class="okposition">
                     <div class="ok"><i class="fas fa-check-circle" ></i></div>
@@ -95,7 +95,7 @@
     </div><!--Fin de div de transition2-->
     <div class="transition3">
     <div class="title"><h2><span>DESS</span>ERTS</h2></div>
-        <a href="naming" class="sticker">
+        <a class="sticker">
             <div class="txtsticker">
                 <div class="okposition">
                     <div class="ok"><i class="fas fa-check-circle" ></i></div>
@@ -105,7 +105,7 @@
                 <div class="price">18€</div></div>
             </div>
         </a>
-        <a href="naming" class="sticker">
+        <a class="sticker">
             <div class="txtsticker">
                 <div class="okposition">
                     <div class="ok"><i class="fas fa-check-circle" ></i></div>
@@ -115,7 +115,7 @@
                 <div class="price">22€</div></div>
             </div>
         </a>
-        <a href="naming" class="sticker">
+        <a  class="sticker">
             <div class="txtsticker">
                 <div class="okposition">
                     <div class="ok"><i class="fas fa-check-circle" ></i></div>
@@ -128,7 +128,7 @@
     </div><!--Fin de transition3-->
     </div>
     <div class=movebtn>
-        <div class="btn" href="">Commander</div>
+        <div class="btn">Commander</div>
     </div>
     <footer>
         <div class="footer">
