--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <div class="containerbtn">
                 <div class="number"><p>2</p></div>
                     <div class="btnfonction">
-                        <div class="pic"><i class="fas fa-list"></i></div><span>Composez votre menu</span></div>
+                        <div class="pic0"><i class="fas fa-list"></i></div><span>Composez votre menu</span></div>
                     </div>
             </div>
             <div class="containerbtn">
@@ -53,8 +53,8 @@
                 <div class="txtrestaurants">
                     <div class="txtheart"><h4>La palette du goût</h4>
                         <div class="heart">
-                            <div class="empty"><img src="Sass/heart-svgrepo-com-2.svg"></div>
-                            <div class="full"><img src="Sass/heart-shape-silhouette_icon-icons.com_73533.svg"></div>
+                            <div class="empty"><i class="far fa-heart"></i></div>
+                            <div class="full"><i class="fas fa-heart"></i></div>
                         </div>
                     </div>
                     <h5>Ménilmontant</h5>
@@ -68,10 +68,9 @@
                 <div class="txtrestaurants">
                     <div class="txtheart"><h4>La note enchanté</h4>
                         <div class="heart">
-                            <div class="empty"><img src="Sass/heart-svgrepo-com-2.svg"></div>
-                            <div class="full"><img src="Sass/heart-shape-silhouette_icon-icons.com_73533.svg"></div>
-                    
-                        </div>
+                            <div class="empty"><i class="far fa-heart"></i></div>
+                            <div class="full"><i class="fas fa-heart"></i></div>
+                            </div>
                     </div>
                     <h5>Charonne</h5>
                     </div>
@@ -82,8 +81,8 @@
             <div class="txtrestaurants">
                     <div class="txtheart"><h4>A la française</h4>
                         <div class="heart">
-                            <div class="empty"><img src="Sass/heart-svgrepo-com-2.svg"></div>
-                            <div class="full"><img src="Sass/heart-shape-silhouette_icon-icons.com_73533.svg"></div>
+                            <div class="empty"><i class="far fa-heart"></i></div>
+                            <div class="full"><i class="fas fa-heart"></i></div>
                         </div>
                     </div>
                     <h5>Cité Rouge</h5>
@@ -94,8 +93,8 @@
              <div class="txtrestaurants">      
                     <div class="txtheart"><h4>Le délice des sens</h4>
                         <div class="heart">
-                            <div class="empty"><img src="Sass/heart-svgrepo-com-2.svg"></div>
-                            <div class="full"><img src="Sass/heart-shape-silhouette_icon-icons.com_73533.svg"></div>
+                            <div class="empty"><i class="far fa-heart"></i></div>
+                            <div class="full"><i class="fas fa-heart"></i></div>
                     
                         </div>
                     </div>
