--- a/Palette.html
+++ b/Palette.html
@@ -33,7 +33,7 @@
                 </div>
                 <div class="naming"><h3>Fricassée d'escargot</h3></div>
                 <div class="sidedish">
-                <p>Au piment d'espelette</p>
+                <div class="test">Au piment d'espelette</div>
                 <div class="price">25€</div>
                 </div>
             </div>
@@ -44,7 +44,8 @@
                     <div class="ok"><i class="fas fa-check-circle" ></i></div>
                 </div>
                 <div class="naming" id="naming"><h3>Foie gras de canard mi-cuit</h3></div>
-                <div class="sidedish"><p>Et ses copeaux de truffe noire</p>
+                <div class="sidedish">
+                <p>Et ses copeaux de truffe noire</p>
                 <div class="price">35€</div>
                 </div>
             </div>
@@ -55,8 +56,10 @@
                     <div class="ok"><i class="fas fa-check-circle" ></i></div>
                 </div>
                 <div class="naming"><h3>Oeuf au plat</h3></div>
-                <div class="sidedish"><p>Assaisonné à la truffe sur lit de caviar</p>
-                <div class="price">20€</div></div>
+                <div class="sidedish">
+                <p>Assaisonné à la truffe sur lit de caviar</p>
+                <div class="price">20€</div>
+                </div>
             </div>
         </a>
         </div> <!--Fin de div de transition1-->
@@ -68,7 +71,8 @@
                     <div class="ok"><i class="fas fa-check-circle" ></i></div>
                 </div>
                 <div class="naming"><h3>Filet de boeuf aux herbes</h3></div>
-                <div class="sidedish"><p>Accompagné de sa ribambelle de légumes</p>
+                <div class="sidedish">
+                <div class="test">Accompagné de sa ribambelle de légumes</div>
                 <div class="price">40€</div></div>
             </div>
         </a>
@@ -97,12 +101,15 @@
     <div class="title"><h2><span>DESS</span>ERTS</h2></div>
         <a class="sticker">
             <div class="txtsticker">
-                <div class="okposition">
-                    <div class="ok"><i class="fas fa-check-circle" ></i></div>
+                <input type="checkbox" id="check-click">
+                    <div class="okposition">
+                    <label for="check-click" class="ok">
+                    <i class="fas fa-check-circle" ></i>
                 </div>
                 <div class="naming" id="naming"><h3>Paris-Brest</h3></div>
                 <div class="sidedish"><p>Revisité</p>
                 <div class="price">18€</div></div>
+                    </label>
             </div>
         </a>
         <a class="sticker">
