--- a/Délice.html
+++ b/Délice.html
@@ -8,14 +8,14 @@
     <title>Le délice des sens</title>
 </head>
 <body>
-    <div class="loader"><img src="Sass/Sanji_Drapeau.jpg" class="imgcook"></img></div>
+    <div class="loader"><img src="Sass/Sanji_Drapeau.jpg" class="imgcook" alt="Drapeau-Pirate-cuisiner"></div>
     <section class="allmenu">
         <a href="index.html" class="arrow"><i class="fas fa-arrow-left" ></i></a>
         <div class="header">
         <img src="images/logo/ohmyfood.png"  alt="OhMyFooD" class="logoheader">
         </div>
     <section>
-        <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash Page1.jpg" alt="La Palette du goût" class="bannerpic">
+        <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash-Page1.jpg" alt="La Palette du goût" class="bannerpic">
     </section>
     <section>
         <div class="menu">
@@ -31,7 +31,7 @@
                 <div class="okposition"><div class="ok"><i class="fas fa-check-circle" ></i></div></div>
                 <div class="naming"><h3>Tartare de thon</h3></div>
                 <div class="sidedish">
-                <p>Assaisonné au yuzu</p>
+                    <div class="ellipsis">Assaisonné au yuzu</div>
                 <div class="price">25€</div>
                 </div>
             </div>
@@ -41,7 +41,8 @@
                 <div class="okposition">
                     <div class="ok"><i class="fas fa-check-circle" ></i></div></div>
                 <div class="naming" id="naming"><h3>Bouchée de homard croustillant</h3></div>
-                <div class="sidedish"><p>Et sa farandole de petits légumes</p>
+                <div class="sidedish">
+                    <div class="ellipsis">Et sa farandole de petits légumes</div>
                 <div class="price">35€</div></div>
             </div>
         </a>
@@ -50,8 +51,9 @@
                 <div class="okposition">
                     <div class="ok"><i class="fas fa-check-circle" ></i></div>
                 </div>
-                <div class="naming" id="naming"><h3>Velouté de cèpes</h3></div>
-                <div class="sidedish"><p>Aux truffe</p>
+                <div class="naming"><h3>Velouté de cèpes</h3></div>
+                <div class="sidedish">
+                    <div class="ellipsis">Aux truffes</div>
                 <div class="price">20€</div></div>
             </div>
         </a>
@@ -63,9 +65,9 @@
                 <div class="okposition">
                     <div class="ok"><i class="fas fa-check-circle" ></i></div>
                 </div>    
-                <div class="naming" id="naming"><h3>Poulet rôti aux herbes de Provence</h3></div>
+                <div class="naming"><h3>Poulet rôti aux herbes de Provence</h3></div>
                 <div class="sidedish">
-                <div class="ellipsis"><p>Et sa crème de truffe</p></div>
+                    <div class="ellipsis">Et sa crème de truffe</div>
                 <div class="price">40€</div></div>
             </div>
         </a>
@@ -74,8 +76,9 @@
                 <div class="okposition">
                     <div class="ok"><i class="fas fa-check-circle" ></i></div>
                 </div>
-                <div class="naming" id="naming"><h3>Langouste rôtie</h3></div>
-                <div class="sidedish"><p>Et ses légumes de saison</p>
+                <div class="naming"><h3>Langouste rôtie</h3></div>
+                <div class="sidedish">
+                    <div class="ellipsis">Et ses légumes de saison</div>
                 <div class="price">35€</div></div>
             </div>
         </a>
@@ -84,8 +87,9 @@
                 <div class="okposition">
                     <div class="ok"><i class="fas fa-check-circle" ></i></div>
                 </div>
-                <div class="naming" id="naming"><h3>Côte de boeuf Angus</h3></div>
-                <div class="sidedish"><p>Et sa purée de panais</p>
+                <div class="naming"><h3>Côte de boeuf Angus</h3></div>
+                <div class="sidedish">
+                    <div class="ellipsis">Et sa purée de panais</div>
                 <div class="price">44€</div></div>
             </div>
         </a>
@@ -97,8 +101,9 @@
                 <div class="okposition">
                     <div class="ok"><i class="fas fa-check-circle" ></i></div>
                 </div>
-                <div class="naming" id="naming"><h3>Farandole de desserts</h3></div>
-                <div class="sidedish"><p>Du chef</p>
+                <div class="naming"><h3>Farandole de desserts</h3></div>
+                <div class="sidedish">
+                    <div class="ellipsis">Du chef</div>
                 <div class="price">18€</div></div>
             </div>
         </a>
@@ -107,8 +112,9 @@
                 <div class="okposition">
                     <div class="ok"><i class="fas fa-check-circle" ></i></div>
                 </div>
-                <div class="naming" id="naming"><h3>Crème brulée</h3></div>
-                <div class="sidedish"><p>Revisitée</p>
+                <div class="naming"><h3>Crème brulée</h3></div>
+                <div class="sidedish">
+                    <div class="ellipsis">Revisitée</div>
                 <div class="price">22€</div></div>
             </div>
         </a>
@@ -117,33 +123,36 @@
                 <div class="okposition">
                     <div class="ok"><i class="fas fa-check-circle" ></i></div>
                 </div>
-                <div class="naming" id="naming"><h3>Tiramisu</h3></div>
-                <div class="sidedish"><p>À la noisette</p>
+                <div class="naming"><h3>Tiramisu</h3></div>
+                <div class="sidedish">
+                    <div class="ellipsis">À la noisette</div>
                 <div class="price">23€</div></div>
             </div>
         </a>
     </div><!--Fin de transition3-->
     </div>
     <div class=movebtn>
-        <div class="btn" href="">Commander</div>
+        <div class="btn">Commander</div>
     </div>
+        </div>
     <footer>
         <div class="footer">
             <h6>ohmyfood</h6>
                 <div class= "txtfooter">
                     <div class="proposition">
-                        <div class="ustensil"><i class="fas fa-utensils"></div></i>Proposer votre restaurant<br>
+                        <div class="ustensil"><i class="fas fa-utensils"></i></div>
+                        Proposer votre restaurant<br>
                     </div>
                     <div class="partnair">
-                        <div class="hands"><i class="fas fa-hands-helping" ></div></i>Devenir partenaire<br>
+                        <div class="hands"><i class="fas fa-hands-helping" ></i></div>
+                        Devenir partenaire<br>
                     </div>
                         <div class="mentions">Mentions légales</div>
-                        <div class="contact"><a href="mailto: ohmyfood@outlook.fr" class="contact">Contact</a></div>
+                        <a href="mailto:ohmyfood@outlook.fr" class="contact">Contact</a>
+                    </div>
                 </div>
-        </div>
-        </div>  <!--fin de div du menu-->  
-        </section>
-    </footer> 
-    </section>
-</body>
-</html>
+            </footer>
+            </section>
+            </section>
+        </body>
+        </html>
