--- a/Enchantée.html
+++ b/Enchantée.html
@@ -8,14 +8,14 @@
     <title>La note enchantée</title>
 </head>
 <body>
-    <div class="loader"><img src="Sass/Sanji_Drapeau.jpg" class="imgcook"></div>
+    <div class="loader"><img src="Sass/Sanji_Drapeau.jpg" class="imgcook" alt="Drapeau-pirate-cuisinier"></div>
     <section class="allmenu">
         <a href="index.html" class="arrow"><i class="fas fa-arrow-left" ></i></a>
         <div class="header">
         <img src="images/logo/ohmyfood.png"  alt="OhMyFooD" class="logoheader">
         </div>
     <section>
-        <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash Page1.jpg" alt="La Palette du goût" class="bannerpic">
+        <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash-Page1.jpg" alt="La Palette du goût" class="bannerpic">
     </section>
     <section>
         <div class="menu">
@@ -32,7 +32,8 @@
                     <div class="ok"><i class="fas fa-check-circle" ></i></div>
                 </div>
                 <div class="naming"><h3>Ravioles de foie gras</h3></div>
-                <div class="sidedish"><p>Accompagnés de leur crème à la truffe</p>
+                <div class="sidedish">
+                    <div class="ellipsis">Accompagnés de leur crème à la truffe</div>
                 <div class="price">25€</div></div>
             </div>
         </a>
@@ -42,7 +43,8 @@
                     <div class="ok"><i class="fas fa-check-circle" ></i></div>
                 </div>
                 <div class="naming"><h3>Caviar osciètre</h3></div>
-                <div class="sidedish"><p>Sur blini à la farine de blé noir</p>
+                <div class="sidedish">
+                    <div class="ellipsis">Sur blini à la farine de blé noir</div>
                 <div class="price">35€</div></div>
             </div>
         </a>
@@ -52,7 +54,8 @@
                     <div class="ok"><i class="fas fa-check-circle" ></i></div>
                 </div>
                 <div class="naming"><h3>Homard et espuma de potiron</h3></div>
-                <div class="sidedish"><p>Mariné aux zestes d'orange</p>
+                <div class="sidedish">
+                    <div class="ellipsis">Mariné aux zestes d'orange</div>
                 <div class="price">20€</div></div>
             </div>
         </a>
@@ -62,7 +65,8 @@
                     <div class="ok"><i class="fas fa-check-circle" ></i></div>
                 </div>
                 <div class="naming"><h3>Foie gras de canard cuit entier</h3></div>
-                <div class="sidedish"><p>Confiture de figue et pain toasté</p>
+                <div class="sidedish">
+                    <div class="ellipsis">Confiture de figue et pain toasté</div>
                 <div class="price">35€</div></div>
             </div>
         </a>
@@ -75,7 +79,8 @@
                     <div class="ok"><i class="fas fa-check-circle" ></i></div>
                 </div>
                 <div class="naming"><h3>Noix de coquilles Saint-Jacques</h3></div>
-                <div class="sidedish"><p>Sur lit de purée de céleri-rave</p>
+                <div class="sidedish">
+                    <div class="ellipsis">Sur lit de purée de céleri-rave</div>
                 <div class="price">40€</div></div>
             </div>
         </a>
@@ -85,7 +90,8 @@
                     <div class="ok"><i class="fas fa-check-circle" ></i></div>
                 </div>
                 <div class="naming"><h3>Langoustine poêlée</h3></div>
-                <div class="sidedish"><p>Purée de patate douce</p>
+                <div class="sidedish">
+                    <div class="ellipsis">Purée de patate douce</div>
                 <div class="price">35€</div></div>
             </div>
         </a>
@@ -95,7 +101,8 @@
                     <div class="ok"><i class="fas fa-check-circle" ></i></div>
                 </div>
                 <div class="naming"><h3>Mijoté de queue de boeuf</h3></div>
-                <div class="sidedish"><p>Et riz sauvage aux zestes de citron</p>
+                <div class="sidedish">
+                    <div class="ellipsis">Et riz sauvage aux zestes de citron</div>
                 <div class="price">44€</div></div>
             </div>
         </a>
@@ -108,7 +115,8 @@
                     <div class="ok"><i class="fas fa-check-circle" ></i></div>
                 </div>
                 <div class="naming"><h3>Macaron noisette et chocolat</h3></div>
-                <div class="sidedish"><p>Glace au caramel brun et sel de Guérande</p>
+                <div class="sidedish">
+                    <div class="ellipsis">Glace au caramel brun et sel de Guérande</div>
                 <div class="price">18€</div></div>
             </div>
         </a>
@@ -118,7 +126,8 @@
                     <div class="ok"><i class="fas fa-check-circle" ></i></div>
                 </div>
                 <div class="naming"><h3>Baba au rhum revisité</h3></div>
-                <div class="sidedish"><p>Avec son coulis de citron</p>
+                <div class="sidedish">
+                    <div class="ellipsis">Avec son coulis de citron</div>
                 <div class="price">22€</div></div>
             </div>
         </a>
@@ -128,7 +137,8 @@
                     <div class="ok"><i class="fas fa-check-circle" ></i></div>
                 </div>
                 <div class="naming"><h3>Tarte au citron meringuée</h3></div>
-                <div class="sidedish"><p>Déstructurée</p>
+                <div class="sidedish">
+                    <div class="ellipsis">Déstructurée</div>
                 <div class="price">23€</div></div>
             </div>
         </a>
@@ -137,23 +147,25 @@
         <div class=movebtn>
             <div class="btn">Commander</div>
         </div>
+        </div>
     <footer>
         <div class="footer">
             <h6>ohmyfood</h6>
                 <div class= "txtfooter">
                     <div class="proposition">
-                        <div class="ustensil"><i class="fas fa-utensils"></div></i>Proposer votre restaurant<br>
+                        <div class="ustensil"><i class="fas fa-utensils"></i></div>
+                        Proposer votre restaurant<br>
                     </div>
                     <div class="partnair">
-                        <div class="hands"><i class="fas fa-hands-helping" ></div></i>Devenir partenaire<br>
+                        <div class="hands"><i class="fas fa-hands-helping" ></i></div>
+                        Devenir partenaire<br>
                     </div>
                         <div class="mentions">Mentions légales</div>
-                        <div class="contact"><a href="mailto: ohmyfood@outlook.fr" class="contact">Contact</a></div>
+                        <a href="mailto:ohmyfood@outlook.fr" class="contact">Contact</a>
                 </div>
-        </div>
         </div>  <!--fin de div du menu-->  
-        </section>
     </footer> 
+    </section>
     </section>
 </body>
 </html>
