--- a/Française.html
+++ b/Française.html
@@ -8,13 +8,12 @@
     <title>À la Française</title>
 </head>
 <body>
-    <div class="loader"><img src="Sass/Sanji_Drapeau.jpg" class="imgcook"></img></div>
+    <div class="loader"><img src="Sass/Sanji_Drapeau.jpg" class="imgcook" alt="Drapeau-Pirate-cuisinier"></div>
     <section class="allmenu">
         <a href="index.html" class="arrow"><i class="fas fa-arrow-left" ></i></a>
         <div class="header">
         <img src="images/logo/ohmyfood.png"  alt="OhMyFooD" class="logoheader">
         </div>
-    </header>
     <section>
         <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="La Palette du goût" class="bannerpic">
     </section>
@@ -33,7 +32,8 @@
                     <div class="ok"><i class="fas fa-check-circle" ></i></div>
                 </div>
                 <div class="naming"><h3>Tartare de poulpe acidulé</h3></div>
-                <div class="sidedish"><p>Aux zestes d'orange</p>
+                <div class="sidedish">
+                    <div class="ellipsis" >Aux zestes d'orange</div>
                 <div class="price">25€</div></div>
             </div>
         </a>
@@ -43,7 +43,8 @@
                     <div class="ok"><i class="fas fa-check-circle" ></i></div>
                 </div>
                 <div class="naming"><h3>Velouté de légumes d'antan</h3></div>
-                <div class="sidedish"><p>Carotte, panais, topinambour</p>
+                <div class="sidedish">
+                    <div class="ellipsis">Carotte, panais, topinambour</div>
                 <div class="price">35€</div></div>
             </div>
         </a>
@@ -53,7 +54,8 @@
                     <div class="ok"><i class="fas fa-check-circle" ></i></div>
                 </div>
                 <div class="naming"><h3>Soupe à l'oignon</h3></div>
-                <div class="sidedish"><p>Revisitée</p>
+                <div class="sidedish">
+                    <div class="ellipsis">Revisitée</div>
                 <div class="price">20€</div></div>
             </div>
         </a>
@@ -66,7 +68,8 @@
                     <div class="ok"><i class="fas fa-check-circle" ></i></div>
                 </div>
                 <div class="naming"><h3>Coquilles Saint-Jacques</h3></div>
-                <div class="sidedish"><p>Accompagnées d'une purée de panais</p>
+                <div class="sidedish">
+                    <div class="ellipsis">Accompagnées d'une purée de panais</div>
                 <div class="price">40€</div></div>
             </div>
         </a>
@@ -76,7 +79,8 @@
                     <div class="ok"><i class="fas fa-check-circle" ></i></div>
                 </div>
                 <div class="naming"><h3>Magret de canard</h3></div>
-                <div class="sidedish"><p>Et parmentier de pommes de terre</p>
+                <div class="sidedish">
+                    <div class="ellipsis">Et parmentier de pommes de terre</div>
                 <div class="price">35€</div></div>
             </div>
         </a>
@@ -86,7 +90,8 @@
                     <div class="ok"><i class="fas fa-check-circle" ></i></div>
                 </div>
                 <div class="naming"><h3>Pigeonneau d’Ille-et-Vilaine</h3></div>
-                <div class="sidedish"><p>Sur son lit de gnocchis aux légumes</p>
+                <div class="sidedish">
+                    <div class="ellipsis">Sur son lit de gnocchis aux légumes</div>
                 <div class="price">44€</div></div>
             </div>
         </a>
@@ -99,7 +104,8 @@
                     <div class="ok"><i class="fas fa-check-circle" ></i></div>
                 </div>
                 <div class="naming"><h3>Pétales de violettes glacés</h3></div>
-                <div class="sidedish"><p>Et purée de noisettes</p>
+                <div class="sidedish">
+                    <div class="ellipsis">Et purée de noisettes</div>
                 <div class="price">18€</div></div>
             </div>
         </a>
@@ -109,7 +115,8 @@
                     <div class="ok"><i class="fas fa-check-circle" ></i></div>
                 </div>
                 <div class="naming"><h3>Fondant au chocolat</h3></div>
-                <div class="sidedish"><p>Revisité</p>
+                <div class="sidedish">
+                    <div class="ellipsis">Revisité</div>
                 <div class="price">22€</div></div>
             </div>
         </a>
@@ -119,32 +126,35 @@
                     <div class="ok"><i class="fas fa-check-circle" ></i></div>
                 </div>
                 <div class="naming"><h3>Millefeuille croustillant</h3></div>
-                <div class="sidedish"><p>Myrtilles et pâte d’amande</p>
+                <div class="sidedish">
+                    <div class="ellipsis">Myrtilles et pâte d’amande</div>
                 <div class="price">23€</div></div>
             </div>
         </a>
     </div><!--Fin de transition3-->
     </div>
         <div class=movebtn>
-            <div class="btn" href="">Commander</div>
+            <div class="btn">Commander</div>
+        </div>
         </div>
     <footer>
         <div class="footer">
             <h6>ohmyfood</h6>
                 <div class= "txtfooter">
                     <div class="proposition">
-                        <div class="ustensil"><i class="fas fa-utensils"></div></i>Proposer votre restaurant<br>
+                        <div class="ustensil"><i class="fas fa-utensils"></i></div>
+                        Proposer votre restaurant<br>
                     </div>
                     <div class="partnair">
-                        <div class="hands"><i class="fas fa-hands-helping" ></div></i>Devenir partenaire<br>
+                        <div class="hands"><i class="fas fa-hands-helping" ></i></div>
+                        Devenir partenaire<br>
                     </div>
                         <div class="mentions">Mentions légales</div>
-                        <div class="contact"><a href="mailto: ohmyfood@outlook.fr" class="contact">Contact</a></div>
+                        <a href="mailto:ohmyfood@outlook.fr" class="contact">Contact</a>
                 </div>
-        </div>
-        </div>  <!--fin de div du menu-->  
-        </section>
+        </div>  <!--fin de div du menu--> 
     </footer> 
+    </section>
     </section>
 </body>
 </html>
