--- a/Palette.html
+++ b/Palette.html
@@ -8,7 +8,7 @@
     <title>La palette du Goût</title>
 </head>
 <body>
-    <div class="loader"><img src="Sass/Sanji_Drapeau.jpg" class="imgcook"></img></div>
+    <div class="loader"><img src="Sass/Sanji_Drapeau.jpg" class="imgcook" alt="Drapeau-Pirate-cuisinier"></div>
     <section class="allmenu">
         <a href="index.html" class="arrow"><i class="fas fa-arrow-left" ></i></a>
         <div class="header">
@@ -33,7 +33,7 @@
                 </div>
                 <div class="naming"><h3>Fricassée d'escargot</h3></div>
                 <div class="sidedish">
-                <div class="test">Au piment d'espelette</div>
+                    <div class="ellipsis">Au piment d'espelette</div>
                 <div class="price">25€</div>
                 </div>
             </div>
@@ -45,7 +45,7 @@
                 </div>
                 <div class="naming" id="naming"><h3>Foie gras de canard mi-cuit</h3></div>
                 <div class="sidedish">
-                <p>Et ses copeaux de truffe noire</p>
+                    <div class="ellipsis">Et ses copeaux de truffe noire</div>
                 <div class="price">35€</div>
                 </div>
             </div>
@@ -57,32 +57,33 @@
                 </div>
                 <div class="naming"><h3>Oeuf au plat</h3></div>
                 <div class="sidedish">
-                <p>Assaisonné à la truffe sur lit de caviar</p>
+                    <div class="ellipsis">Assaisonné à la truffe sur lit de caviar</div>
                 <div class="price">20€</div>
                 </div>
             </div>
         </a>
         </div> <!--Fin de div de transition1-->
-    <div class= "transition2">
-    <div class="title"><h2><span>PLAT</span>S</h2></div>
-        <a class="sticker">
-            <div class="txtsticker">
-                <div class="okposition">
-                    <div class="ok"><i class="fas fa-check-circle" ></i></div>
+        <div class= "transition2">
+        <div class="title"><h2><span>PLAT</span>S</h2></div>
+            <a class="sticker">
+                <div class="txtsticker">
+                    <div class="okposition">
+                        <div class="ok"><i class="fas fa-check-circle" ></i></div>
                 </div>
                 <div class="naming"><h3>Filet de boeuf aux herbes</h3></div>
                 <div class="sidedish">
-                <div class="test">Accompagné de sa ribambelle de légumes</div>
+                    <div class="ellipsis">Accompagné de sa ribambelle de légumes</div>
                 <div class="price">40€</div></div>
-            </div>
-        </a>
-        <a class="sticker">
-            <div class="txtsticker">
-                <div class="okposition">
-                    <div class="ok"><i class="fas fa-check-circle" ></i></div>
                 </div>
-                <div class="naming" id="naming"><h3>Parmentier de queue de boeuf</h3></div>
-                <div class="sidedish"><p>À la truffe noire sur sa purée de panais</p>
+            </a>
+            <a class="sticker">
+                <div class="txtsticker">
+                    <div class="okposition">
+                        <div class="ok"><i class="fas fa-check-circle" ></i></div>
+                </div>
+                <div class="naming"><h3>Parmentier de queue de boeuf</h3></div>
+                <div class="sidedish">
+                    <div class="ellipsis">À la truffe noire sur sa purée de panais</div>
                 <div class="price">35€</div></div>
             </div>
         </a>
@@ -91,8 +92,9 @@
                 <div class="okposition">
                     <div class="ok"><i class="fas fa-check-circle" ></i></div>
                 </div>
-                <div class="naming" id="naming"><h3>Filet de turbot</h3></div>
-                <div class="sidedish"><p>Aux agrumes</p>
+                <div class="naming"><h3>Filet de turbot</h3></div>
+                <div class="sidedish">
+                    <div class="ellipsis">Aux agrumes</div>
                 <div class="price">44€</div></div>
             </div>
         </a>
@@ -101,15 +103,13 @@
     <div class="title"><h2><span>DESS</span>ERTS</h2></div>
         <a class="sticker">
             <div class="txtsticker">
-                <input type="checkbox" id="check-click">
                     <div class="okposition">
-                    <label for="check-click" class="ok">
-                    <i class="fas fa-check-circle" ></i>
-                </div>
-                <div class="naming" id="naming"><h3>Paris-Brest</h3></div>
-                <div class="sidedish"><p>Revisité</p>
+                        <div class="ok"><i class="fas fa-check-circle" ></i></div>
+                    </div>
+                <div class="naming"><h3>Paris-Brest</h3></div>
+                <div class="sidedish">
+                    <div class="ellipsis">Revisité</div>
                 <div class="price">18€</div></div>
-                    </label>
             </div>
         </a>
         <a class="sticker">
@@ -117,8 +117,9 @@
                 <div class="okposition">
                     <div class="ok"><i class="fas fa-check-circle" ></i></div>
                 </div>
-                <div class="naming" id="naming"><h3>Macaron au chocolat d'exception</h3></div>
-                <div class="sidedish"><p>Et glace à la vanille de Madagascar</p>
+                <div class="naming"><h3>Macaron au chocolat d'exception</h3></div>
+                <div class="sidedish">
+                    <div class="ellipsis">Et glace à la vanille de Madagascar</div>
                 <div class="price">22€</div></div>
             </div>
         </a>
@@ -127,8 +128,9 @@
                 <div class="okposition">
                     <div class="ok"><i class="fas fa-check-circle" ></i></div>
                 </div>
-                <div class="naming" id="naming"><h3>Mousse au chocolat</h3></div>
-                <div class="sidedish"><p>Au piment d'Espelette et à la truffe noire</p>
+                <div class="naming"><h3>Mousse au chocolat</h3></div>
+                <div class="sidedish">
+                    <div class="ellipsis">Au piment d'Espelette et à la truffe noire</div>
                 <div class="price">23€</div></div>
             </div>
         </a>
@@ -137,23 +139,25 @@
     <div class=movebtn>
         <div class="btn">Commander</div>
     </div>
+    </div>
     <footer>
         <div class="footer">
-            <h6>ohmyfood</h6>
+                <h6>ohmyfood</h6>
                 <div class= "txtfooter">
                     <div class="proposition">
-                        <div class="ustensil"><i class="fas fa-utensils"></div></i>Proposer votre restaurant<br>
+                        <div class="ustensil"><i class="fas fa-utensils"></i></div>
+                        Proposer votre restaurant<br>
                     </div>
                     <div class="partnair">
-                        <div class="hands"><i class="fas fa-hands-helping" ></div></i>Devenir partenaire<br>
+                        <div class="hands"><i class="fas fa-hands-helping" ></i></div>
+                        Devenir partenaire<br>
                     </div>
-                        <div class="mentions">Mentions légales</div>
-                        <div class="contact"><a href="mailto: ohmyfood@outlook.fr" class="contact">Contact</a></div>
+                    <div class="mentions">Mentions légales</div>
+                    <a href="mailto:ohmyfood@outlook.fr" class="contact">Contact</a>
                 </div>
         </div>
-        </div>  <!--fin de div du menu-->  
-        </section>
-    </footer> 
+    </footer>
+    </section>
     </section>
 </body>
 </html>
