--- a/Enchantée.html
+++ b/Enchantée.html
@@ -154,7 +154,7 @@
         </div>
         </div>
     <footer>
-        <div class="footer">
+        <div class="footer2">
             <h6>ohmyfood</h6>
                 <div class= "txtfooter">
                     <div class="proposition">
